# ECE1724-local-llm-inference-service

./: Cargo.toml
src/: api.rs  app_state.rs  engine.rs  main.rs  model_registry.rs  types.rs
static/: index.html
