[package] 
name = "local-llm-server" 
version = "0.1.0" 
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
parking_lot = "0.12"
anyhow = "1"
async-trait = "0.1"

# Candle 系列：显式锁到 0.4.1（当前 0.4 最新 patch）
candle-core = { version = "0.4.1" }
candle-nn = { version = "0.4.1" }
candle-transformers = { version = "0.4.1" }
hf-hub = "0.3.2"
tokenizers = "0.15"

# 关键：强制 half / rand / rand_distr 使用与 Candle 兼容的版本
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_distr = "0.4.3"

half = { version = "2.4.1", default-features = false, features = ["std", "rand_distr"] }
